# AyudaDiagnostica

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  deploy.bat  docker-compose.yml  pyproject.toml  railway.toml  setup.bat
.claude/: settings.local.json
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/routes/: prediction.py
backend/app/schemas/: prediction.py
backend/app/services/: gradcam_service.py  model_service.py
frontend/: .env.example  Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/diagnostico/: page.tsx
frontend/src/app/dossier/: page.tsx
frontend/src/components/: HeatmapOverlay.tsx  ImageUploader.tsx  PrintButton.tsx  ReportView.tsx  ResultCard.tsx
frontend/src/lib/: api.ts
model/: download_dataset.py  requirements.txt
model/checkpoints/: best_model.pth
model/results/: test_metrics.json  training_history.json
model/src/: config.py  dataset.py  evaluate.py  gradcam.py  model.py  train.py
scripts/: commands.py
